# PendulumRotQuadruped

./: .gitignore  README.md
src/examples/: CMakeLists.txt  package.xml
src/examples/launch/: example_robot_create.launch
src/examples/src/: example_receive_joint_state.cpp  example_robot_create.cpp
src/pendulum_quadruped/: CMakeLists.txt  package.xml
src/pendulum_quadruped/include/pendulum_quadruped/common/: pr_eigen_types.h
src/pendulum_quadruped/include/pendulum_quadruped/robot/: pr_description_loader.h  pr_pose_twist.h  pr_quadruped.h  pr_robot_base.h  pr_robot_component.h  pr_robot_description.h  pr_robot_factory.h  pr_robot_generator.h  pr_robot_model.h  pr_robot_types.h
src/pendulum_quadruped/include/pendulum_quadruped/state_update/: pr_observer.h  pr_observer.h.autosave
src/pendulum_quadruped/include/pendulum_quadruped/temp/: pr_robot_observer_debug.h
src/pendulum_quadruped/src/robot/: pr_description_loader.cpp  pr_quadruped.cpp  pr_robot_base.cpp  pr_robot_description.cpp  pr_robot_model.cpp  pr_robot_types.cpp
src/pendulum_quadruped/src/state_update/: pr_observer.cpp
src/pendulum_quadruped/src/temp/: pr_robot_observer_debug.cpp
src/robot_description/a1_description/: CMakeLists.txt  package.xml
src/robot_description/a1_description/config/: pr_robot_description.yaml  robot_description.yaml
src/robot_description/a1_description/launch/: check_marker.rviz  load_urdf.launch
src/robot_description/a1_description/urdf/: a1.urdf
src/robot_description/a1_description/xacro/: gazebo.xacro  robot.xacro  stereo_camera.xacro
src/simulation/gazebo_extend/controller_plugin/: CMakeLists.txt  package.xml  plugins.xml
src/simulation/gazebo_extend/controller_plugin/include/: pr_joint_controller.h
src/simulation/gazebo_extend/controller_plugin/src/: pr_joint_controller.cpp
src/simulation/gazebo_extend/pr_joint_msgs/: CMakeLists.txt  package.xml
src/simulation/gazebo_extend/pr_joint_msgs/msg/: Joint.msg  JointCmd.msg
src/simulation/gazebo_extend/visualization_plugin/: CMakeLists.txt  package.xml
src/simulation/gazebo_extend/visualization_plugin/include/visualization_plugin/: draw_gui_plugin.h  draw_trajectory_plugin.h
src/simulation/gazebo_extend/visualization_plugin/msg/: JointCmd.msg
src/simulation/gazebo_extend/visualization_plugin/src/: draw_gui_plugin.cpp  draw_trajectory_plugin.cpp
src/simulation/pr_gazebo/: CMakeLists.txt  package.xml
src/simulation/pr_gazebo/config/: a1_joint_control.yaml
src/simulation/pr_gazebo/include/pr_gazebo/: gazebo_model_spawn.h
src/simulation/pr_gazebo/launch/: gazebo_spawn.launch  gazebo_startup.launch
src/simulation/pr_gazebo/node/: spawn_model.cpp  tf_broadcaster.cpp
src/simulation/pr_gazebo/src/: gazebo_model_spawn.cpp
src/simulation/pr_gazebo/world/: gui.world  maze.world
