<?xml version="1.0"?>
<package format="2">
  <name>examples</name>
  <version>0.0.0</version>
  <description>The examples package</description>

  <maintainer email="1973671061@qq.com">ZhenyuXu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pendulum_quadruped</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
