<?xml version="1.0"?>
<package format="2">
  <name>pendulum_quadruped</name>
  <version>0.0.0</version>
  <description>The pendulum_quadruped package</description>

  <maintainer email="1973671061@qq.com">ZhenyuXu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <depend>quadprogpp</depend>

  <export>
  </export>
</package>
