<?xml version="1.0"?>
<package format="2">
    <name>a1_description</name>
    <version>0.0.0</version>
    <description>The robot description package</description>

    <maintainer email="1973671061@qq.com">ZhenyuXu</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
