<?xml version="1.0"?>
<package format="2">
  <name>pr_gazebo</name>
  <version>0.0.0</version>
  <description>The pr_gazebo package</description>

  <maintainer email="1973671061@qq.com">ZhenyuXu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
