<?xml version="1.0"?>

<package format="2">
  <name>pr_joint_msgs</name>
  <version>0.0.0</version>
  <description>
    The joint_msgs package.
  </description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  
</package>
