<?xml version="1.0"?>
<package format="2">
    <name>visualization_plugin</name>
    <version>0.0.0</version>
    <description>The gazebo visualization extend package</description>

    <maintainer email="TODO@TODO.TODO">TODO</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
</package>
